css/style.css
/****** General ***********/
* {
  font-family: "Raleway", sans-serif;
}

:root {
  --main-color: #0065fc;
  --main-bg-color: #f2f2f2;
  --filter-bg-color: #deebff;
}

.fa-solid {
  color: var(--main-color);
}

body {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.main-container {
  width: 100%;
  max-width: 1440px;
  min-width: 320px;
  padding: 0 50px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 30px;
}

a {
  color: inherit;
  text-decoration: none;
}

.section-title {
  margin: 0;
  font-size: 22px;
}

.card {
  background-color: white;
  border-radius: 20px;
  padding: 5px;
  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

img {
  display: block;
}

.card img,
.card-hebergement img,
.activites-card img {
  object-fit: cover;
}

.card-title {
  font-size: 16px;
}

.euro {
  font-weight: 700;
}

.neutral-star {
  color: var(--main-bg-color);
}

ul,
ol {
  list-style: none;
  margin: 0;
  padding: 0;
}

/****** Header ***********/
header {
  height: 79px;
  display: flex;
  justify-content: space-between;
  margin: 0;
}

header > a {
  display: flex;
  align-items: center;
}

header img {
  width: 61.09px;
  height: 19px;
}

.main-nav {
  display: flex;
  align-items: center;
}

.main-nav ul {
  display: flex;
  gap: 68px;
  height: 100%;
}

.main-nav a {
  height: 35px;
  display: flex;
  align-items: flex-end;
}

.main-nav a:hover {
  border-top: 2px solid var(--main-color);
  color: var(--main-color);
}

/****** Hero ***********/

.hero {
  display: flex;
  flex-direction: column;
  gap: 35px;
}

.hero-title {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.hero-title h1 {
  font-size: 22px;
  margin: 0;
}

.hero-title p {
  margin: 0;
}

.search-form {
  width: 377px;
  height: 49px;
  display: flex;
  outline: 1px solid var(--main-bg-color);
  border-radius: 15px;
}

.logo-form {
  background-color: var(--main-bg-color);
  width: 50px;
  border-radius: 15px 0 0 15px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.fa-location-dot {
  color: black;
}

.search-city {
  border: none;
  padding: 15px 16px;
}

.search-city::placeholder {
  color: black;
  font-size: 18px;
  font-weight: 700;
}

.search-btn-desktop {
  background-color: var(--main-color);
  color: white;
  border: 1px solid var(--main-color);
  border-radius: 0 15px 15px 0;
  padding: 15px 16px;
  flex-grow: 1;
  font-size: 18px;
  font-weight: 700;
}

.search-btn-mobile {
  display: none;
}

/****** Filtres ***********/

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
  display: flex;
  justify-content: space-between;
}

.hebergements-and-populaires section {
  background-color: var(--main-bg-color);
  border-radius: 20px;
  padding: 30px;
  box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
  width: 65%;
}

/****** Populaires ***********/
.populaires {
  width: 32%;
}

.populaires-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.populaires-cards .card {
  display: flex;
  margin-top: 33px;
}

.populaires-cards img {
  width: 33%;
  height: 136px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
  width: 67%;
  padding-left: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box;
}

.populaires-cards .card-title {
  margin-top: 10px;
  margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
  margin: 0;
}

.populaires-cards .card-rating {
  margin-bottom: 5px;
}

/****** Activites ***********/

/****** Footer ***********/

/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
  .hebergements-and-populaires {
    flex-direction: column;
  }

  .hebergements {
    width: 100%;
  }

  .populaires {
    width: 100%;
    margin-top: 50px;
  }

  .populaires-cards {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .populaires-cards a {
    width: 30%;
  }

  .populaires-cards .card-title {
    font-size: 14px;
  }

  .populaires-cards .card-subtitle {
    font-size: 13px;
  }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
  /* ... */
}

